@@ -623,6 +623,7 @@ src/db/20120610-create-sshkeys.sql -text
 src/db/20120610-migrate-sshkeys.php -text
 src/db/20120611-drop-obsolete-column-data-in-docman.sql -text
 src/db/20120709-drop-obsolete-column-language_id-in-docman.sql -text
+src/db/20120710-add-docgroupnew-in-activity_vw.sql -text
 src/db/FTI-20061025.sql -text
 src/db/SQL_2.6/replicate.sh svneol=native#text/x-sh
 src/db/gforge-data-mysql.sql -text
